--- a/src/scss/blocks-scss/our-production.scss
+++ b/src/scss/blocks-scss/our-production.scss
@@ -90,6 +90,11 @@
       max-width: 100%;
       width: 100%;
     }
+
+    .our-production .ul .our-production--description {
+      justify-content: center;
+    }
+
   }
 
   @media (max-width: 650px) {
