--- a/src/scss/blocks-scss/reviews.scss
+++ b/src/scss/blocks-scss/reviews.scss
@@ -5,6 +5,10 @@
   margin-top: 10px;
 }
 
+.reviews h3 {
+  padding: 0 15px;
+}
+
 .reviews--item {
   max-width: 200px;
 
@@ -44,7 +48,7 @@
 
 @media (max-width: 490px) {
   .reviews--item {
-    max-width: 140px;
+    max-width: 45%;
   }
 
   .reviews--block {
