--- a/src/scss/blocks-scss/made-in-kaz.scss
+++ b/src/scss/blocks-scss/made-in-kaz.scss
@@ -1,5 +1,6 @@
 .made-in-kaz {
   background-color: #e6f7f9;
+  overflow: hidden;
 
   .image-h {
     display: none;
@@ -10,6 +11,16 @@
     align-items: center;
   }
 
+  .observer .image {
+    top: 50px;
+    opacity: 0;
+  }
+
+  .observer .text {
+    left: 80px;
+    opacity: 0;
+  }
+
   .container {
     padding: 30px 40px;
     max-width: 1550px;
@@ -18,12 +29,18 @@
   .image {
     min-width: 130px;
     margin-right: 1.5rem;
+    position: relative;
+    top: 0;
+    transition: all .5s ease-out;
   }
 
   .text {
     font-family: var(--font-light);
     font-size: 32px;
     color: #808080;
+    position: relative;
+    transition: all .75s ease-out;
+    left: 0;
   }
 }
 
